examples/pass/basics/default_init_small.dew
// expect: 0
// Tier: Small
// MVP: default initialization of Int.
def x: Int;
def main = fn { x -> stdout; };
